[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprite/New Piskel (3).png" type="Texture" id=1]
[ext_resource path="res://FinishLine.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 159.5, 102 )

[node name="FinishLine" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 320 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_FinishLine_body_entered"]
